--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-calendars": "^1.1301.0",
-    "react-native-svg": "^13.14.0"
+    "react-native-render-html": "^6.3.4",
+    "react-native-svg": "^13.14.0",
+    "react-native-video": "^5.2.1",
+    "react-native-webview": "^13.6.2",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
